library/src/libqwindow.h

typedef struct QCloseEvent QCloseEvent;
typedef struct QEvent QEvent;
typedef struct QExposeEvent QExposeEvent;
typedef struct QFocusEvent QFocusEvent;
typedef struct QHideEvent QHideEvent;
typedef struct QKeyEvent QKeyEvent;
typedef struct QMouseEvent QMouseEvent;
typedef struct QMoveEvent QMoveEvent;
typedef struct QObject QObject;
typedef struct QPaintEvent QPaintEvent;
typedef struct QResizeEvent QResizeEvent;
typedef struct QScreen QScreen;
typedef struct QShowEvent QShowEvent;
typedef struct QTabletEvent QTabletEvent;
typedef struct QTouchEvent QTouchEvent;
typedef struct QWheelEvent QWheelEvent;
typedef struct QWindow QWindow;
void QWindow_RequestUpdate(QWindow* self);
void QWindow_ScreenChanged(QWindow* self, QScreen* screen);
void QWindow_ModalityChanged(QWindow* self, int modality);
void QWindow_WindowStateChanged(QWindow* self, int windowState);
void QWindow_WindowTitleChanged(QWindow* self, libqt_string title);
void QWindow_XChanged(QWindow* self, int arg);
void QWindow_YChanged(QWindow* self, int arg);
void QWindow_WidthChanged(QWindow* self, int arg);
void QWindow_HeightChanged(QWindow* self, int arg);
void QWindow_MinimumWidthChanged(QWindow* self, int arg);
void QWindow_MinimumHeightChanged(QWindow* self, int arg);
void QWindow_MaximumWidthChanged(QWindow* self, int arg);
void QWindow_MaximumHeightChanged(QWindow* self, int arg);
void QWindow_VisibleChanged(QWindow* self, bool arg);
void QWindow_VisibilityChanged(QWindow* self, int visibility);
void QWindow_ActiveChanged(QWindow* self);
void QWindow_ContentOrientationChanged(QWindow* self, int orientation);
void QWindow_FocusObjectChanged(QWindow* self, QObject* object);
void QWindow_OpacityChanged(QWindow* self, double opacity);
void QWindow_TransientParentChanged(QWindow* self, QWindow* transientParent);
void QWindow_ExposeEvent(QWindow* self, QExposeEvent* param1);
void QWindow_ResizeEvent(QWindow* self, QResizeEvent* param1);
void QWindow_PaintEvent(QWindow* self, QPaintEvent* param1);
void QWindow_MoveEvent(QWindow* self, QMoveEvent* param1);
void QWindow_FocusInEvent(QWindow* self, QFocusEvent* param1);
void QWindow_FocusOutEvent(QWindow* self, QFocusEvent* param1);
void QWindow_ShowEvent(QWindow* self, QShowEvent* param1);
void QWindow_HideEvent(QWindow* self, QHideEvent* param1);
void QWindow_CloseEvent(QWindow* self, QCloseEvent* param1);
bool QWindow_Event(QWindow* self, QEvent* param1);
void QWindow_KeyPressEvent(QWindow* self, QKeyEvent* param1);
void QWindow_KeyReleaseEvent(QWindow* self, QKeyEvent* param1);
void QWindow_MousePressEvent(QWindow* self, QMouseEvent* param1);
void QWindow_MouseReleaseEvent(QWindow* self, QMouseEvent* param1);
void QWindow_MouseDoubleClickEvent(QWindow* self, QMouseEvent* param1);
void QWindow_MouseMoveEvent(QWindow* self, QMouseEvent* param1);
void QWindow_WheelEvent(QWindow* self, QWheelEvent* param1);
void QWindow_TouchEvent(QWindow* self, QTouchEvent* param1);
void QWindow_TabletEvent(QWindow* self, QTabletEvent* param1);
bool QWindow_NativeEvent(QWindow* self, libqt_string eventType, void* message, intptr_t* result);
libqt_string QWindow_Tr2(const char* s, const char* c);
libqt_string QWindow_Tr3(const char* s, const char* c, int n);
QWindow* QWindow_Parent1(const QWindow* self, int mode);
void QWindow_SetFlag2(QWindow* self, int param1, bool on);
bool QWindow_IsAncestorOf2(const QWindow* self, QWindow* child, int mode);