src/libqwindow.bf

	[LinkName("QWindow_RequestUpdate")]
	public static extern void QWindow_RequestUpdate(void* c_this);
	[LinkName("QWindow_ScreenChanged")]
	public static extern void QWindow_ScreenChanged(void* c_this, QScreen screen);
	[LinkName("QWindow_ModalityChanged")]
	public static extern void QWindow_ModalityChanged(void* c_this, int64 modality);
	[LinkName("QWindow_WindowStateChanged")]
	public static extern void QWindow_WindowStateChanged(void* c_this, int64 windowState);
	[LinkName("QWindow_WindowTitleChanged")]
	public static extern void QWindow_WindowTitleChanged(void* c_this, char8[] title);
	[LinkName("QWindow_XChanged")]
	public static extern void QWindow_XChanged(void* c_this, int32 arg);
	[LinkName("QWindow_YChanged")]
	public static extern void QWindow_YChanged(void* c_this, int32 arg);
	[LinkName("QWindow_WidthChanged")]
	public static extern void QWindow_WidthChanged(void* c_this, int32 arg);
	[LinkName("QWindow_HeightChanged")]
	public static extern void QWindow_HeightChanged(void* c_this, int32 arg);
	[LinkName("QWindow_MinimumWidthChanged")]
	public static extern void QWindow_MinimumWidthChanged(void* c_this, int32 arg);
	[LinkName("QWindow_MinimumHeightChanged")]
	public static extern void QWindow_MinimumHeightChanged(void* c_this, int32 arg);
	[LinkName("QWindow_MaximumWidthChanged")]
	public static extern void QWindow_MaximumWidthChanged(void* c_this, int32 arg);
	[LinkName("QWindow_MaximumHeightChanged")]
	public static extern void QWindow_MaximumHeightChanged(void* c_this, int32 arg);
	[LinkName("QWindow_VisibleChanged")]
	public static extern void QWindow_VisibleChanged(void* c_this, bool arg);
	[LinkName("QWindow_VisibilityChanged")]
	public static extern void QWindow_VisibilityChanged(void* c_this, int64 visibility);
	[LinkName("QWindow_ActiveChanged")]
	public static extern void QWindow_ActiveChanged(void* c_this);
	[LinkName("QWindow_ContentOrientationChanged")]
	public static extern void QWindow_ContentOrientationChanged(void* c_this, int64 orientation);
	[LinkName("QWindow_FocusObjectChanged")]
	public static extern void QWindow_FocusObjectChanged(void* c_this, QObject object);
	[LinkName("QWindow_OpacityChanged")]
	public static extern void QWindow_OpacityChanged(void* c_this, double opacity);
	[LinkName("QWindow_TransientParentChanged")]
	public static extern void QWindow_TransientParentChanged(void* c_this, QWindow transientParent);
	[LinkName("QWindow_ExposeEvent")]
	public static extern void QWindow_ExposeEvent(void* c_this, QExposeEvent param1);
	[LinkName("QWindow_ResizeEvent")]
	public static extern void QWindow_ResizeEvent(void* c_this, QResizeEvent param1);
	[LinkName("QWindow_PaintEvent")]
	public static extern void QWindow_PaintEvent(void* c_this, QPaintEvent param1);
	[LinkName("QWindow_MoveEvent")]
	public static extern void QWindow_MoveEvent(void* c_this, QMoveEvent param1);
	[LinkName("QWindow_FocusInEvent")]
	public static extern void QWindow_FocusInEvent(void* c_this, QFocusEvent param1);
	[LinkName("QWindow_FocusOutEvent")]
	public static extern void QWindow_FocusOutEvent(void* c_this, QFocusEvent param1);
	[LinkName("QWindow_ShowEvent")]
	public static extern void QWindow_ShowEvent(void* c_this, QShowEvent param1);
	[LinkName("QWindow_HideEvent")]
	public static extern void QWindow_HideEvent(void* c_this, QHideEvent param1);
	[LinkName("QWindow_CloseEvent")]
	public static extern void QWindow_CloseEvent(void* c_this, QCloseEvent param1);
	[LinkName("QWindow_Event")]
	public static extern bool QWindow_Event(void* c_this, QEvent param1);
	[LinkName("QWindow_KeyPressEvent")]
	public static extern void QWindow_KeyPressEvent(void* c_this, QKeyEvent param1);
	[LinkName("QWindow_KeyReleaseEvent")]
	public static extern void QWindow_KeyReleaseEvent(void* c_this, QKeyEvent param1);
	[LinkName("QWindow_MousePressEvent")]
	public static extern void QWindow_MousePressEvent(void* c_this, QMouseEvent param1);
	[LinkName("QWindow_MouseReleaseEvent")]
	public static extern void QWindow_MouseReleaseEvent(void* c_this, QMouseEvent param1);
	[LinkName("QWindow_MouseDoubleClickEvent")]
	public static extern void QWindow_MouseDoubleClickEvent(void* c_this, QMouseEvent param1);
	[LinkName("QWindow_MouseMoveEvent")]
	public static extern void QWindow_MouseMoveEvent(void* c_this, QMouseEvent param1);
	[LinkName("QWindow_WheelEvent")]
	public static extern void QWindow_WheelEvent(void* c_this, QWheelEvent param1);
	[LinkName("QWindow_TouchEvent")]
	public static extern void QWindow_TouchEvent(void* c_this, QTouchEvent param1);
	[LinkName("QWindow_TabletEvent")]
	public static extern void QWindow_TabletEvent(void* c_this, QTabletEvent param1);
	[LinkName("QWindow_NativeEvent")]
	public static extern bool QWindow_NativeEvent(void* c_this, uint8[] eventType, void message, c_uintptr result);
	[LinkName("QWindow_Tr2")]
	public static extern char8[] QWindow_Tr2(char8[] s, char8[] c);
	[LinkName("QWindow_Tr3")]
	public static extern char8[] QWindow_Tr3(char8[] s, char8[] c, int32 n);
	[LinkName("QWindow_Parent1")]
	public static extern QWindow QWindow_Parent1(void* c_this, int64 mode);
	[LinkName("QWindow_SetFlag2")]
	public static extern void QWindow_SetFlag2(void* c_this, int64 param1, bool on);
	[LinkName("QWindow_IsAncestorOf2")]
	public static extern bool QWindow_IsAncestorOf2(void* c_this, QWindow child, int64 mode);
}